# souffle-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/souffle-rs/: Cargo.toml
crates/souffle-rs-build/: Cargo.toml
crates/souffle-rs-build/src/: artifacts.rs  config.rs  error.rs  execute.rs  lib.rs  metadata.rs  plan.rs  schema_extract.rs  tests.rs
crates/souffle-rs-build/src/artifacts/: cxx_wrapper.rs
crates/souffle-rs-build/tests/: native_smoke.rs
crates/souffle-rs-sys/: Cargo.toml
crates/souffle-rs-sys/src/: lib.rs
crates/souffle-rs/src/: backend.rs  embedded.rs  error.rs  export.rs  ffi.rs  info.rs  lib.rs  parity.rs  performance.rs  process.rs  program.rs  schema.rs  sqlite.rs  tests.rs  value.rs
crates/souffle-rs/src/embedded/: decode.rs  encode.rs  iterator.rs
crates/souffle-rs/src/process/: facts.rs
crates/souffle-rs/tests/: process_smoke.rs
docs/: audit-todo-details.md  audit-todo.md  souffle-rs-rust-crate-goal.md
examples/: README.md
examples/auto-schema/: Cargo.toml
examples/auto-schema/logic/: reachability.dl
examples/auto-schema/src/: main.rs
examples/build-plan/: Cargo.toml
examples/build-plan/src/: main.rs
examples/dynamic-api/: Cargo.toml
examples/dynamic-api/src/: main.rs
examples/embedded-auto-schema/: Cargo.toml  README.md  build.rs
examples/embedded-auto-schema/src/: main.rs
examples/embedded-build/: Cargo.toml  README.md  build.rs
examples/embedded-build/src/: main.rs  schema.rs
examples/process-backend/: Cargo.toml
examples/process-backend/logic/: reachability.dl
examples/process-backend/src/: main.rs
examples/souffle-addon/: Cargo.toml  README.md  build.rs
examples/souffle-addon/logic/: addon.dl
examples/souffle-addon/native/: number_addon.cpp
examples/souffle-addon/src/: main.rs
