[workspace]
members = [
    "crates/souffle-rs",
    "crates/souffle-rs-build",
    "crates/souffle-rs-sys",
    "examples/build-plan",
    "examples/dynamic-api",
    "examples/process-backend",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/ethever/souffle-rs"

[workspace.dependencies]
strum = { version = "0.27.2", features = ["derive"] }
