[package]
name = "souffle-rs-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "build.rs helper for generating and compiling embedded Souffle programs"

[dependencies]
cc = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
souffle-rs = { path = "../souffle-rs" }
souffle-rs-sys = { path = "../souffle-rs-sys" }
strum.workspace = true
thiserror = "2"

[dev-dependencies]
tempfile = "3"
