[package]
name = "souffle-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Safe Rust API for embedded Souffle Datalog programs"

[dependencies]
rusqlite = { version = "0.36.0", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
souffle-rs-sys = { path = "../souffle-rs-sys" }
strum.workspace = true
thiserror = "2"

[dev-dependencies]
tempfile = "3"
