[package]
name = "souffle-rs-example-embedded-build"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/ethever/souffle-rs"
publish = false
build = "build.rs"

[workspace]

[dependencies]
souffle-rs = { path = "../../crates/souffle-rs" }

[build-dependencies]
souffle-rs = { path = "../../crates/souffle-rs" }
souffle-rs-build = { path = "../../crates/souffle-rs-build" }
